# System-of-build

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/: CMakeLists.txt
docs/: CMakeLists.txt
example/: .sob  main1.cpp  main2.cpp
include/: build.h  code.h  common.h  error.h  lexer.h  parser.h  sob.h
src/: build.cpp  common.ixx  error.cpp  lexer.cpp  lexer.ixx  main.cpp  operators.ixx  parser.cpp  sob.cpp  sob.ixx
test/: CMakeLists.txt  lexer.cpp  parser.cpp  sob.cpp  test.cpp  test.h
